Resolved database duplicates and implemented user's favorite movie removal