@@ -13,6 +13,7 @@ import org.springframework.security.web.SecurityFilterChain;
 import org.springframework.security.web.authentication.UsernamePasswordAuthenticationFilter;
 import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
+import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 import org.springframework.web.servlet.config.annotation.CorsRegistry;
 import org.springframework.web.servlet.config.annotation.WebMvcConfigurer;
 
@@ -20,7 +21,39 @@ import java.lang.reflect.Array;
 import java.util.Arrays;
 import java.util.List;
 
-
+//
+//@Configuration
+//@EnableWebSecurity
+//@RequiredArgsConstructor
+//public class SecurityConfiguration {
+//
+//    private final AuthenticationProvider authenticationProvider;
+//    private final SecurityJwtConfig jwtAuthFiler;
+//
+//    @Bean
+//    public SecurityFilterChain securityFilterChain(HttpSecurity http) throws Exception {
+//        http.cors(Customizer.withDefaults()).csrf().disable().authorizeHttpRequests()
+//                .requestMatchers("/api/auth/**")
+//                .permitAll()
+//                .requestMatchers("/api/movies/popular").permitAll()
+//                .requestMatchers("/api/movies/Fav/delete/**").authenticated()//Zezwalamy każdemu na dostęp do interfejsu API REST logowania
+//                .anyRequest().authenticated().and().sessionManagement()
+//                .sessionCreationPolicy(SessionCreationPolicy.STATELESS)
+//                .and()
+//                .authenticationProvider(authenticationProvider)
+//                .addFilterBefore(jwtAuthFiler, UsernamePasswordAuthenticationFilter.class);
+////        http.csrf().disable().authorizeHttpRequests().anyRequest().permitAll();
+//        return http.build();
+//    }
+//
+////    @Bean
+////    CorsConfigurationSource corsConfigurationSource() {
+////        CorsConfiguration configuration = new CorsConfiguration();
+////        configuration.setAllowedOrigins(Arrays.asList("http://localhost:3000/"));
+////        configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE"));
+////        configuration.setAllowedHeaders(List.of());
+////    }
+//}
 @Configuration
 @EnableWebSecurity
 @RequiredArgsConstructor
@@ -31,24 +64,32 @@ public class SecurityConfiguration {
 
     @Bean
     public SecurityFilterChain securityFilterChain(HttpSecurity http) throws Exception {
-        http.cors(Customizer.withDefaults()).csrf().disable().authorizeHttpRequests()
-                .requestMatchers("/api/auth/**")
-                .permitAll()
-                .requestMatchers("/api/movies/popular").permitAll()//Zezwalamy każdemu na dostęp do interfejsu API REST logowania
-                .anyRequest().authenticated().and().sessionManagement()
+        http.cors(Customizer.withDefaults())
+                .csrf().disable()
+                .authorizeHttpRequests()
+                .requestMatchers("/api/auth/**").permitAll()
+                .requestMatchers("/api/movies/popular").permitAll()
+                .anyRequest().authenticated()
+                .and()
+                .sessionManagement()
                 .sessionCreationPolicy(SessionCreationPolicy.STATELESS)
                 .and()
                 .authenticationProvider(authenticationProvider)
                 .addFilterBefore(jwtAuthFiler, UsernamePasswordAuthenticationFilter.class);
-//        http.csrf().disable().authorizeHttpRequests().anyRequest().permitAll();
+
         return http.build();
     }
 
-//    @Bean
-//    CorsConfigurationSource corsConfigurationSource() {
-//        CorsConfiguration configuration = new CorsConfiguration();
-//        configuration.setAllowedOrigins(Arrays.asList("http://localhost:3000/"));
-//        configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE"));
-//        configuration.setAllowedHeaders(List.of());
-//    }
+    @Bean
+    CorsConfigurationSource corsConfigurationSource() {
+        CorsConfiguration configuration = new CorsConfiguration();
+        configuration.setAllowedOrigins(Arrays.asList("http://localhost:3000"));
+        configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS"));
+        configuration.setAllowedHeaders(Arrays.asList("*"));
+        configuration.setAllowCredentials(true);
+
+        UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
+        source.registerCorsConfiguration("/**", configuration);
+        return source;
+    }
 }
